tests/errors/wrong_start_pin.nm

abstract component Main {
    pin FOO: input = 0;
    pin BAR: input = 1;
}